# pygubu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  HISTORY.md  LEEME.md  LEEME.txt  LICENSE  LISEZMOI.md  MANIFEST.in  README.md  README.txt  build-and-serve.sh  create-imgs.py  exampleui_1.tkb  makepofile.sh  myttk  pygubu.sh  pyproject.toml  req-extra.py  requirements.txt  run.sh  runtests.sh  setup.py  test-dist.sh  testui.py  tkbuilder-ui.py  tkbuilder.py  tkbuilderui.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
development/: devtool.sh  makebuild.sh  req-extra.py  requirements.txt  runtests.sh
doc/: Diagrama1.dia  arrow.xcf  pygubu.xcf  tkbuilder.ep
examples/: binding.ui  button_cb.py  button_cb.ui  canvas_example.ui  commands.py  commands.ui  example_grid_rc.ui  example_grid_rc_2.ui  exampleui_1.tkb  framepad.ui  helloworld.ui  holamundo.ui  menu.py  menu.ui  menubutton.ui  menuexample.ui  panedwindow.ui  panes_and_notebooks.ui  pygubu-ui.pui  scrollbarhelper.ui  scrolledframe.ui  treeview.py  treeview.ui  variables.ui  vscrolledframe.ui
examples/cx_freeze/: button_cb.py  button_cb.ui  myapp.py  setup.py
examples/helloworld/: helloworld.py  helloworld.ui  holamundo.py  holamundo.ui
examples/nuitka/: compile.bat  copydatafiles.bat  myapp.py  myapp.ui  nuitkahelper.py
examples/py2exe/: button_cb.py  setup.py
examples/pyinstaller/: myapp.py  myapp.spec  myapp.ui
po/: pygubu.mo  pygubu.pot
pygubu/: __init__.py  binding.py  builder.py  builderobject.py  i18n.py  main.py  properties.py  propertieseditor.py  stdwidgets.py  stockimage.py  testui.py  tkproperties.py  tkstdwidgets.py  ttkstdwidgets.py  ui2code.py  util.py  widgeteditor.py
pygubu/api/v1/: __init__.py  _private.py
pygubu/builder/: __init__.py  builderobject.py  tkstdwidgets.py  ttkstdwidgets.py  uidefinition.py  widgetmeta.py
pygubu/builder/widgets/: calendarframe.py  calendarwidget.py  combobox.py  dialog.py  editabletreeview.py  pathchooserinput.py  scrollbarhelper.py  scrolledframe.py  tkinterscrolledtext.py  tkscrollbarhelper.py  tkscrolledframe.py
pygubu/component/: builderloader.py  builderobject.py  plugin_engine.py  plugin_manager.py  uidefinition.py  widgetmeta.py
pygubu/locale/: pygubu.pot
pygubu/plugins/awesometkinter/: __init__.py  awesomebuilders.py  button.py  config.py  frame.py  label.py  progressbar.py  text.py
pygubu/plugins/pygubu/: __init__.py  calendarframe.py  dialog.py  pathchooserinput.py  scrollbarhelper.py  scrolledframe.py  tkscrollbarhelper.py  tkscrolledframe.py
pygubu/plugins/tk/: __init__.py  tkstdwidgets.py
pygubu/plugins/tkcalendar/: __init__.py  basecalendar.py  dateentry.py
pygubu/plugins/tkinterweb/: __init__.py
pygubu/plugins/tksheet/: __init__.py  sheet.py
pygubu/plugins/ttk/: __init__.py  ttkstdwidgets.py
pygubu/plugins/ttkwidgets/: __init__.py  autocomplete.py  calendar.py  checkboxtreeview.py  color.py  frames.py  itemscanvas.py  linklabel.py  scaleentry.py  scrolledlistbox.py  table.py  tickscale.py  utils.py
pygubu/uidesigner/: bindingseditor.py  i18n.py  main.py  previewer.py  properties.py  propertieseditor.py  widgetdescr.py  widgeteditor.py
pygubu/uidesigner/ui/: about_dialog.ui  pygubu-ui.ui
pygubu/uidesigner/util/: __init__.py  dialog.py  observable.py  stockimage.py  textentry.py
pygubu/util/: __init__.py  textentry.py
pygubu/utils/: font.py
pygubu/widgets/: accordionframe.py  autoarrangeframe.py  calendarframe.py  calendarwidget.py  combobox.py  dialog.py  editabletreeview.py  pathchooserinput.py  scrollbarhelper.py  scrolledframe.py  simpletooltip.py  tkscrollbarhelper.py  tkscrolledframe.py  ttkspinbox.py
pygubudesigner/: __init__.py  __main__.py  bindingseditor.py  col.py  i18n.py  layouteditor.py  main.py  preferences.py  previewer.py  properties.py  propertieseditor.py  uitreeeditor.py  widgetdescr.py  widgeteditor.py
pygubudesigner/images/: logo_pygubu.icns
pygubudesigner/images/pygubuLogo/: logo_pygubu.xcf  rootOfSVGs.txt
pygubudesigner/ui/: about_dialog.ui  preferences_dialog.ui  pygubu-ui.ui
pygubudesigner/util/: __init__.py  dialog.py  observable.py  selecttool.py
pygubudesigner/widgets/: __init__.py  colorentry.py  compoundpropertyeditor.py  dimensionentry.py  dinamicpropeditor.py  dynamicpropeditor.py  fontentry.py  imageentry.py  propertyeditor.py  sizeentry.py  stickyentry.py  textentry.py  tkvarentry.py  toplevelframe.py  whentry.py
src/pygubu/: __init__.py  binding.py  builder.py  i18n.py  stockimage.py
src/pygubu/__pyinstaller/: __init__.py  hook-pygubu.py
src/pygubu/binding/: __init__.py  base.py  (+1 more)
tests/: fixpath.py  support.py  test_accordionframe.py  test_accordionframe.ui  test_autoarrangeframe.ui  test_builder_forget_unnamed.py  test_builder_forget_unnamed.ui  test_builderfont.py  test_builderfont.ui  test_button.py  test_button_command.py  test_button_command.ui  test_calendar.py  test_calendar.ui  test_calendarframe.py  test_calendarframe.ui  test_canvas.py  test_canvas.ui  test_colorinput.py  test_colorinput.ui  test_command_id_arg.py  test_command_id_arg.ui  test_custom_widget.py  test_custom_widget.ui  test_custom_widget_module.py  test_dialog.py  test_dialog.ui  test_editabletreeview.py  test_editabletreeview.ui  test_entry.py  test_entry_commands.py  test_entry_commands.ui  test_filterabletreeview.py  test_filterabletreeview.ui  test_floodgauge.py  test_floodgauge.ui  test_fontinput.py  test_fontinput.ui  test_frame.py  test_frame.ui  (+59 more)
tests/designer/: colorpropeditor.py  dynamicpropeditor.py  imgpropeditor.py  tkvareditor.py  whpropeditor.py
ui/: pygubu-ui.ui
wdesings/: colorinput.ui  fontinput.ui
(+206 files in other folders)
